--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <canvas id="pdf-canvas"></canvas>
-    <script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
+    <script src="//mozilla.github.io/pdf.js/build/pdf.mjs" type="module"></script>
     <script>
         // Načtení PDF.js
         var pdfjsLib = window['pdfjs-dist/build/pdf'];
