--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="//mozilla.github.io/pdf.js/build/pdf.mjs" type="module"></script>
     <script>
         // Načtení PDF.js
-        var pdfjsLib = window['pdfjs-dist/build/pdf'];
+        var { pdfjsLib } = globalThis;
 
         // Zajistěte, aby se worker načítal z CDN
         pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://mozilla.github.io/pdf.js/build/pdf.worker.js';
