--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 </head>
 <body>
     <canvas id="pdf-canvas"></canvas>
-    <script src="//mozilla.github.io/pdf.js/build/pdf.mjs" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.js"></script>
     <script>
         // Načtení PDF.js
         var { pdfjsLib } = globalThis;
 
         // Zajistěte, aby se worker načítal z CDN
-        pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://mozilla.github.io/pdf.js/build/pdf.worker.js';
+        pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.worker.js';
 
         // Cesta k vzorovému PDF souboru
         var pdfPath = 'cesta_k_vasemu_vzorovemu_pdf.pdf';
