--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.worker.js';
 
         // Cesta k vzorovému PDF souboru
-        var pdfPath = 'cesta_k_vasemu_vzorovemu_pdf.pdf';
+        var pdfPath = 'https://www.clickdimensions.com/links/TestPDFfile.pdf';
 
         // Načtení dokumentu
         pdfjsLib.getDocument(pdfPath).promise.then(function(pdfDoc) {
