--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <canvas id="pdf-canvas"></canvas>
     <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.js"></script>
     <script>
-        // Načtení PDF.js
+        // Načtení PDF.js hahaha
         // Zajistěte, aby se worker načítal z CDN
         pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.worker.js';
 
