--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>PDF Viewer</title>
 </head>
 <body>
+    <button id="prev-page">Předchozí strana</button>
+    <button id="next-page">Další strana</button>
     <canvas id="pdf-canvas"></canvas>
     <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.js"></script>
     <script>
