--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>PDF Viewer</title>
+    <title>PDF Viewer with Zoom</title>
 </head>
 <body>
     <div>
         <button id="prev-page">Předchozí stránka</button>
-        <span id="page-info">Strana</span>
         <button id="next-page">Další stránka</button>
+        <button id="zoom-in">Přiblížit</button>
+        <button id="zoom-out">Oddálit</button>
+        <span id="page-info">Strana</span>
     </div>
     <canvas id="pdf-canvas"></canvas>
 
@@ -18,69 +20,61 @@
         var pdfPath = 'test.pdf';
         var pdfDoc = null;
         var pageNum = 1;
-        var pageIsRendering = false;
-        var pageNumIsPending = null;
+        var scale = 1.0; // Základní měřítko
 
-        function renderPage(num) {
-            pageIsRendering = true;
-
-            // Získání stránky
+        function renderPage(num, scale) {
             pdfDoc.getPage(num).then(function(page) {
-                var scale = 1.5;
                 var viewport = page.getViewport({scale: scale});
                 var canvas = document.getElementById('pdf-canvas');
-                var ctx = canvas.getContext('2d');
+                var context = canvas.getContext('2d');
                 canvas.height = viewport.height;
                 canvas.width = viewport.width;
 
-                var renderCtx = {canvasContext: ctx, viewport: viewport};
-                page.render(renderCtx).promise.then(function() {
-                    pageIsRendering = false;
-
-                    if (pageNumIsPending !== null) {
-                        renderPage(pageNumIsPending);
-                        pageNumIsPending = null;
-                    }
-                });
+                var renderContext = {
+                    canvasContext: context,
+                    viewport: viewport
+                };
+                page.render(renderContext);
 
                 // Zobrazení čísla stránky
                 document.getElementById('page-info').textContent = 'Strana ' + num + ' z ' + pdfDoc.numPages;
             });
         }
 
-        // Kontrola, zda je stránka ve vykreslování
-        function queueRenderPage(num) {
-            if (pageIsRendering) {
-                pageNumIsPending = num;
-            } else {
-                renderPage(num);
-            }
-        }
-
         // Zobrazení předchozí stránky
-        function onPrevPage() {
+        document.getElementById('prev-page').addEventListener('click', function() {
             if (pageNum <= 1) {
                 return;
             }
             pageNum--;
-            queueRenderPage(pageNum);
-        }
-        document.getElementById('prev-page').addEventListener('click', onPrevPage);
+            renderPage(pageNum, scale);
+        });
 
         // Zobrazení další stránky
-        function onNextPage() {
+        document.getElementById('next-page').addEventListener('click', function() {
             if (pageNum >= pdfDoc.numPages) {
                 return;
             }
             pageNum++;
-            queueRenderPage(pageNum);
-        }
-        document.getElementById('next-page').addEventListener('click', onNextPage);
+            renderPage(pageNum, scale);
+        });
+
+        // Přiblížení
+        document.getElementById('zoom-in').addEventListener('click', function() {
+            scale = scale * 1.1; // Zvýšení měřítka o 10%
+            renderPage(pageNum, scale);
+        });
+
+        // Oddálení
+        document.getElementById('zoom-out').addEventListener('click', function() {
+            scale = scale / 1.1; // Snížení měřítka o 10%
+            renderPage(pageNum, scale);
+        });
 
         // Načtení dokumentu
         pdfjsLib.getDocument(pdfPath).promise.then(function(pdfDoc_) {
             pdfDoc = pdfDoc_;
-            renderPage(pageNum);
+            renderPage(pageNum, scale);
         });
     </script>
 </body>
