--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script>
         pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.worker.js';
 
-        var pdfPath = 'https://www.clickdimensions.com/links/TestPDFfile.pdf';
+        var pdfPath = 'test.pdf';
         var pdfDoc = null;
         var pageNum = 1;
         var scale = 1.0; // Základní měřítko
