--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>PDF Viewer with Sidebar Controls</title>
+    <title>PDF Viewer with Icons and Bottom-aligned Controls</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
         body {
             display: flex;
@@ -12,7 +13,7 @@
         #sidebar {
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: flex-end; /* Zarovnání tlačítek dole */
             align-items: center;
             padding: 10px;
             gap: 10px;
@@ -30,6 +31,9 @@
             max-width: 80%;
             max-height: 100%;
         }
+        .btn {
+            font-size: 24px; /* Velikost ikon */
+        }
     </style>
 </head>
 <body>
@@ -39,12 +43,11 @@
         </div>
     </div>
     <div id="sidebar">
-        <button id="prev-page">Předchozí stránka</button>
-        <button id="next-page">Další stránka</button>
-        <button id="zoom-in">Přiblížit</button>
-        <button id="zoom-out">Oddálit</button>
-        <button id="enter-fullscreen">Celá obrazovka</button>
-        <span id="page-info">Strana</span>
+        <button class="btn" id="prev-page" title="Předchozí stránka"><i class="fas fa-arrow-up"></i></button>
+        <button class="btn" id="next-page" title="Další stránka"><i class="fas fa-arrow-down"></i></button>
+        <button class="btn" id="zoom-in" title="Přiblížit"><i class="fas fa-search-plus"></i></button>
+        <button class="btn" id="zoom-out" title="Oddálit"><i class="fas fa-search-minus"></i></button>
+        <button class="btn" id="enter-fullscreen" title="Celá obrazovka"><i class="fas fa-expand"></i></button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.js"></script>
