--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 
         pdfjsLib.getDocument(pdfPath).promise.then(function(pdfDoc_) {
             pdfDoc = pdfDoc_;
+            document.getElementById('total-pages').textContent = 'Celkem stránek: ' + pdfDoc.numPages;
             renderPage(pageNum);
         });
     </script>
