--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-    <title>PDF Viewer with Icons and Page Count</title>
+    <title>PDF Viewer with Page Controls</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
         body {
@@ -7,32 +7,35 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
-            overflow: hidden; /* Zabránění zobrazení posuvníku */
+            overflow: hidden; /* Zabrání posuvníkům */
         }
         #sidebar {
             display: flex;
             flex-direction: column;
-            justify-content: flex-end; /* Zarovnání tlačítek dole */
+            justify-content: flex-end;
             align-items: center;
             padding: 10px;
             gap: 10px;
-            height: 100%;
             background-color: #f0f0f0;
+            box-sizing: border-box; /* Správný výpočet výšky s paddingem */
         }
         #pdf-viewer {
             display: flex;
             justify-content: center;
             align-items: center;
             flex-grow: 1;
-            overflow: hidden; /* Zabránění zobrazení posuvníku */
         }
         #canvas-container {
             overflow: auto;
             max-width: 80%;
             max-height: 100%;
+            box-sizing: border-box; /* Správný výpočet výšky s paddingem */
         }
         .btn {
-            font-size: 24px; /* Velikost ikon */
+            font-size: 24px;
+        }
+        input[type="number"] {
+            width: 60px;
         }
     </style>
 </head>
@@ -43,7 +46,8 @@
         </div>
     </div>
     <div id="sidebar">
-        <div id="total-pages">Celkem stránek: </div> <!-- Zobrazení celkového počtu stránek -->
+        <input type="number" id="current-page" value="1">
+        <span id="total-pages">/ 0</span>
         <button class="btn" id="prev-page" title="Předchozí stránka"><i class="fas fa-arrow-up"></i></button>
         <button class="btn" id="next-page" title="Další stránka"><i class="fas fa-arrow-down"></i></button>
         <button class="btn" id="zoom-in" title="Přiblížit"><i class="fas fa-search-plus"></i></button>
@@ -77,6 +81,14 @@
                 document.getElementById('page-info').textContent = 'Strana ' + num + ' z ' + pdfDoc.numPages;
             });
         }
+        
+         document.getElementById('current-page').addEventListener('change', function() {
+            var page = parseInt(this.value);
+            if(page >= 1 && page <= pdfDoc.numPages) {
+                pageNum = page;
+                renderPage(pageNum);
+            }
+        });
 
         document.getElementById('prev-page').addEventListener('click', function() {
             if (pageNum <= 1) {
