--- a/index.html
+++ b/index.html
@@ -1,51 +1,43 @@
 <head>
-    <title>PDF Viewer with Page Controls</title>
+    <title>PDF Viewer with Right Sidebar</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
         body {
             display: flex;
-            flex-direction: column; /* Změna na sloupcové rozložení */
-            justify-content: center; /* Vycentrování obsahu vertikálně */
-            align-items: center; /* Vycentrování obsahu horizontálně */
+            justify-content: center; /* Vycentrování obsahu */
             height: 100vh;
             margin: 0;
-            overflow: hidden; /* Zabrání posuvníkům */
+            overflow: hidden; /* Zabrání posuvníkům na úrovni body */
+        }
+        #pdf-viewer {
+            flex-grow: 1;
+            overflow: auto; /* Povoluje posuvníky pro PDF obsah */
+        }
+        #canvas-container {
+            display: flex;
+            justify-content: center; /* Vycentrování PDF horizontálně */
+            padding: 20px; /* Dodává trochu prostoru okolo PDF */
+            box-sizing: border-box;
         }
         #sidebar {
             display: flex;
             flex-direction: column;
-            justify-content: flex-end;
             align-items: center;
             padding: 10px;
             gap: 10px;
             background-color: #f0f0f0;
-            box-sizing: border-box; /* Správný výpočet výšky s paddingem */
-        }
-        #pdf-viewer {
-            display: flex;
-            justify-content: center; /* Vycentrování canvasu horizontálně */
-            align-items: center; /* Vycentrování canvasu vertikálně */
-            flex-grow: 1;
-            width: 100%; /* Využívá celou šířku */
-        }
-        #canvas-container {
-            overflow: auto; /* Umožní posuvník, pokud je obsah větší než kontejner */
-            max-height: 100vh; /* Omezuje maximální výšku na výšku viewportu */
-            width: auto; /* Umožňuje šířku podle obsahu */
-            display: flex; /* Udržuje flexbox pro centrování */
-            justify-content: center; /* Centruje obsah horizontálně */
+            box-sizing: border-box;
         }
         .btn {
             font-size: 24px;
         }
         #page-controls {
             display: flex;
-            align-items: center; /* Zarovnání prvků ve středu */
-            gap: 5px; /* Vzdálenost mezi prvkami */
+            align-items: center;
+            gap: 5px;
         }
-
         #current-page {
-            width: 40px; /* Šířka textového pole */
+            width: 40px;
         }
     </style>
 </head>
@@ -57,7 +49,7 @@
     </div>
     <div id="sidebar">
         <div id="page-controls">
-            <input type="number" id="current-page" value="1"> / <span id="total-pages"></span>
+            <input type="number" id="current-page" value="1"> / <span id="total-pages">0</span>
         </div>
         <button class="btn" id="prev-page" title="Předchozí stránka"><i class="fas fa-arrow-up"></i></button>
         <button class="btn" id="next-page" title="Další stránka"><i class="fas fa-arrow-down"></i></button>
@@ -65,6 +57,7 @@
         <button class="btn" id="zoom-out" title="Oddálit"><i class="fas fa-search-minus"></i></button>
         <button class="btn" id="enter-fullscreen" title="Celá obrazovka"><i class="fas fa-expand"></i></button>
     </div>
+
     
     <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.js"></script>
     <script>
