--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>PDF Viewer with Touch Gestures</title>
+    <title>PDF Viewer with Touch Support for iPad</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <script src="https://hammerjs.github.io/dist/hammer.min.js"></script> <!-- Přidání hammer.js -->
     <style>
         body {
             display: flex;
@@ -25,7 +24,6 @@
         #sidebar {
             display: flex;
             flex-direction: column;
-            justify-content: flex-end;
             align-items: center;
             padding: 10px;
             gap: 10px;
@@ -33,11 +31,13 @@
             box-sizing: border-box;
             height: 100vh;
         }
-        .btn, #page-controls {
+        .btn {
             font-size: 24px;
-            width: 100%;
+        }
+        #page-controls {
             display: flex;
-            justify-content: center;
+            align-items: center;
+            gap: 5px;
         }
         #current-page {
             width: 40px;
@@ -65,7 +65,7 @@
     <script>
         pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.worker.js';
 
-        var pdfPath = 'test.pdf';
+        var pdfPath = 'test.pdf'; // Cesta k PDF
         var pdfDoc = null;
         var pageNum = 1;
         var scale = 1.0;
@@ -89,43 +89,40 @@
             });
         }
 
-        // Dotyková gesta pro PDF viewer
-        var mc = new Hammer(document.getElementById('pdf-viewer'));
-        mc.get('pinch').set({ enable: true });
-        mc.get('swipe').set({ direction: Hammer.DIRECTION_HORIZONTAL });
-
-        mc.on('pinch', function(ev) {
-            if (ev.scale > 1 && scale < 3) {
-                scale *= 1.1;
-            } else if (ev.scale < 1 && scale > 0.5) {
-                scale /= 1.1;
+        // Implementace dotykových událostí pro iPad/Safari
+        let startTouches = null;
+        document.getElementById('pdf-viewer').addEventListener('touchstart', function(event) {
+            if (event.touches.length == 2) { // Uložení počátečních pozic pro gesto dvou prstů
+                startTouches = event.touches;
             }
-            renderPage(pageNum);
-        });
+        }, false);
 
-        mc.on('swipeleft', function(ev) {
-            if (pageNum < pdfDoc.numPages) {
-                pageNum++;
-                renderPage(pageNum);
+        document.getElementById('pdf-viewer').addEventListener('touchmove', function(event) {
+            if (event.touches.length == 2 && startTouches) { // Detekce gesta škrcení/roztažení dvěma prsty
+                event.preventDefault(); // Zabránění výchozímu chování prohlížeče
+                let endTouches = event.touches;
+                let startDistance = Math.hypot(startTouches[0].pageX - startTouches[1].pageX, startTouches[0].pageY - startTouches[1].pageY);
+                let endDistance = Math.hypot(endTouches[0].pageX - endTouches[1].pageX, endTouches[0].pageY - endTouches[1].pageY);
+                let distanceRatio = endDistance / startDistance;
+
+                if (distanceRatio > 1.05) { // Přiblížení
+                    scale *= 1.05;
+                    renderPage(pageNum);
+                } else if (distanceRatio < 0.95) { // Oddálení
+                    scale /= 1.05;
+                    renderPage(pageNum);
+                }
+
+                startTouches = endTouches; // Aktualizace počátečních pozic pro kontinuální gesta
             }
-        });
+        }, false);
 
-        mc.on('swiperight', function(ev) {
-            if (pageNum > 1) {
-                pageNum--;
-                renderPage(pageNum);
-            }
-        });
+        document.getElementById('pdf-viewer').addEventListener('touchend', function(event) {
+            startTouches = null; // Reset počátečních pozic po ukončení gesta
+        }, false);
 
-        document.getElementById('current-page').addEventListener('change', function() {
-            var page = parseInt(this.value);
-            if(page >= 1 && page <= pdfDoc.numPages) {
-                pageNum = page;
-                renderPage(pageNum);
-            }
-        });
-
-        // Přidejte obslužné rutiny pro tlačítka jako dříve
+        // Ostatní ovládací prvky jako dříve
+        // Přidejte obslužné rutiny pro tlačítka, změnu stránek atd.
 
         pdfjsLib.getDocument(pdfPath).promise.then(function(pdfDoc_) {
             pdfDoc = pdfDoc_;
