--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 
         function renderPage(num, customScale = scale) {
             pdfDoc.getPage(num).then(function(page) {
-                var viewport = page.getViewport({scale: customScale});
+                // Oprava: nejprve vyřešit Promise a pak použít výsledek
+                var viewport = page.getViewport({ scale: customScale });
                 var canvas = document.getElementById('pdf-canvas');
                 var ctx = canvas.getContext('2d');
                 canvas.height = viewport.height;
@@ -85,6 +86,7 @@
                 page.render(renderContext);
 
                 document.getElementById('current-page').value = num; // Aktualizace zobrazení aktuální stránky
+                document.getElementById('total-pages').textContent = pdfDoc.numPages; // Aktualizace celkového počtu stránek
             });
         }
         
@@ -126,20 +128,22 @@
             var elem = document.getElementById('canvas-container');
             if (elem.requestFullscreen) {
                 elem.requestFullscreen();
-            } else if (elem.mozRequestFullScreen) { /* Firefox */
+            } else if (elem.mozRequestFullScreen) {
                 elem.mozRequestFullScreen();
-            } else if (elem.webkitRequestFullscreen) { /* Chrome, Safari & Opera */
+            } else if (elem.webkitRequestFullscreen) {
                 elem.webkitRequestFullscreen();
-            } else if (elem.msRequestFullscreen) { /* IE/Edge */
+            } else if (elem.msRequestFullscreen) {
                 elem.msRequestFullscreen();
             }
         });
 
         document.getElementById('fit-width').addEventListener('click', function() {
             var containerWidth = document.getElementById('pdf-viewer').offsetWidth;
-            var viewport = pdfDoc.getPage(pageNum).getViewport({scale: 1});
-            var scaleToFit = containerWidth / viewport.width;
-            renderPage(pageNum, scaleToFit);
+            pdfDoc.getPage(pageNum).then(function(page) {
+                var viewport = page.getViewport({ scale: 1 });
+                var scaleToFit = containerWidth / viewport.width;
+                renderPage(pageNum, scaleToFit);
+            });
         });
 
         pdfjsLib.getDocument(pdfPath).promise.then(function(pdfDoc_) {
