--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
             pdfDoc.getPage(pageNum).then(function(page) {
                 var viewport = page.getViewport({ scale: 1 });
                 var scaleToFit = containerWidth / viewport.width;
+                scale = scaleToFit;
                 renderPage(pageNum, scaleToFit);
             });
         });
