--- a/index.html
+++ b/index.html
@@ -63,11 +63,15 @@
             </div>
         </div>
         <div id="sidebar">
-            <!-- Ostatní tlačítka a ovládací prvky jako dříve -->
             <div id="page-controls">
                 <input type="number" id="current-page" value="1"> / <span id="total-pages">0</span>
             </div>
-            <!-- Tlačítka pro ovládání PDF jako dříve -->
+            <button class="btn" id="prev-page" title="Předchozí stránka"><i class="fas fa-arrow-up"></i></button>
+            <button class="btn" id="next-page" title="Další stránka"><i class="fas fa-arrow-down"></i></button>
+            <button class="btn" id="zoom-in" title="Přiblížit"><i class="fas fa-search-plus"></i></button>
+            <button class="btn" id="zoom-out" title="Oddálit"><i class="fas fa-search-minus"></i></button>
+            <button class="btn" id="enter-fullscreen" title="Celá obrazovka"><i class="fas fa-expand"></i></button>
+            <button class="btn" id="fit-width" title="Rozšířit na šířku stránky"><i class="fas fa-arrows-alt-h"></i></button> <!-- Nové tlačítko pro rozšíření na šířku stránky -->
         </div>
     </div>
 
