--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
         .file-input {
             display: none; /* Skryje skutečný vstupní prvek souboru */
         }
+        #current-page {
+            width: 40px;
+        }
     </style>
 </head>
 <body>
