--- a/index.html
+++ b/index.html
@@ -122,6 +122,15 @@
             } else {
                 alert('Prosím, vyberte PDF soubor.');
             }
+            
+            var containerWidth = document.getElementById('pdf-viewer').offsetWidth;
+            pdfDoc.getPage(pageNum).then(function(page) {
+                var viewport = page.getViewport({ scale: 1 });
+                var scaleToFit = containerWidth / viewport.width;
+                scale = scaleToFit;
+                renderPage(pageNum, scaleToFit);
+            });
+
         });
         
         document.getElementById('current-page').addEventListener('change', function() {
