--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             display: none; /* Skryje skutečný vstupní prvek souboru */
         }
         #current-page {
-            width: 20px;
+            width: 40px;
         }
     </style>
 </head>
@@ -67,7 +67,8 @@
         </div>
         <div id="sidebar">
             <div id="page-controls">
-                <input type="number" id="current-page" value="1"> / <span id="total-pages">0</span>
+                <input type="number" id="current-page" value="1"> <br>
+                <span id="total-pages">0</span>
             </div>
             <button class="btn" id="prev-page" title="Předchozí stránka"><i class="fas fa-arrow-up"></i></button>
             <button class="btn" id="next-page" title="Další stránka"><i class="fas fa-arrow-down"></i></button>
